--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <meta name="description" content="welcome to a new travel">
 <meta property="og:type" content="website">
-<meta property="og:title" content="guosong's blog">
+<meta property="og:title" content="王朝申 大坏蛋">
 <meta property="og:url" content="http://geosson.bid/index.html">
 <meta property="og:site_name" content="guosong's blog">
 <meta property="og:description" content="welcome to a new travel">
